package Practice4_5;

abstract class Shape
{
    int dimension;
}

class Circle extends Shape
{
    int r;
}

class Rectangle extends Shape
{
    int a,b;
}

class Square extends Shape
{
    int a;
}

public class ShapesTask {
}
