@startuml

abstract class Shape
{
int dimension
}
class Circle
{
int r;
}
class Rectangle
{
int a,b;
}
class Square
{
int a;
}
Shape <|-- Circle
Shape <|-- Rectangle
Shape <|-- Square

Circle <|-- Elipse
Circle <|-- SmallCircle
Circle <|-- BigCircle
Rectangle <|-- SmallRectangle
Rectangle <|-- BigRectangle

Square <|-- SmallSquare
Square <|-- BigSquare


@enduml
